Update Demo.md and F1r3Drive classes for improved local setup and wallet unlocking
- Revised Demo.md to clarify prerequisites and streamline instructions for running the F1r3fly shard and F1r3Drive app locally.
- Introduced new command-line options for REV address and private key in F1r3DriveCli to enhance wallet unlocking functionality.
- Added mountAndUnlockRootDirectory method in F1r3DriveFuse to support background unlocking after mounting the filesystem.
- Improved logging for the unlocking process to aid in debugging and monitoring operations.