@@ -1,97 +1,88 @@
-# Running local singleton F1r3fly Node
+# Prerequisites
+- [Docker and Docker Compose](https://www.docker.com/)
+- [MacFuse](https://github.com/macfuse/macfuse/wiki/Getting-Started)
 
-Prerequisites: [Environment set up](./README.md#installation).
+# Running the F1r3fly shard locally
 
-Running on Windows Subsystem for Linux (WSL)? See branch -> `wsl`
-
-1. Prepare `~/.rnode/genesis/wallet.txt` file with a key
-
-```
-11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w,50000000000000000
-```
-
-2. Prepare `~/.rnode/genesis/bonds.txt`:
-
-```
-0494eb76a9afa326ecd805592f1553f88ccc1f7992daf88703cc5af1d2894af50b97d077830706dbb447b2d5d8456b1fe4d4bafe4853d544b45ac6ce9ce0684bba 4
-```
-
-3. Run node with exeeded limit for gRPC message `--api-grpc-max-recv-message-size 1073741824`. 
-   - If you are using a version of `f1r3fly` that uses Rust you will need to add this flag after `java`: `-Djna.library.path=./rust_libraries/release`.
-   - `f9854c5199bc86237206c75b25c6aeca024dccc0f55df3a553131111fd25dd85` is matched for the above wallet.txt. We can skip step 1 and 2, and use the custom `validator-private-key`
-   - Before 'run node' we should build jar under f1r3fly
-   ```sbt 'compile ;project node ;assembly'```
-
+Run shard locally:
 ```sh
-java -Djna.library.path=./rust_libraries/release --add-opens java.base/sun.security.util=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -jar node/target/scala-2.12/rnode-assembly-1.0.0-SNAPSHOT.jar run -s --no-upnp --allow-private-addresses --synchrony-constraint-threshold=0.0 --validator-private-key f9854c5199bc86237206c75b25c6aeca024dccc0f55df3a553131111fd25dd85 --api-grpc-max-recv-message-size 1073741824
+docker-compose -f ./docker-compose.yml up -d
 ```
 
-where f9854c5199bc86237206c75b25c6aeca024dccc0f55df3a553131111fd25dd85 - key from 'cat fileName.sk file' under local ~/.rnode/genesis folder
+Wait for "Listening for traffic" logs:
+```sh
+docker-compose -f ./docker-compose.yml logs
+```
+Logs should be like: 
+```text
+Listening for traffic on rnode://cfae6a0c885d734908f8c756fb0519d2df7fbcec@178.150.31.10?protocol=40400&discovery=40404
+```
 
-1. Wait on log like ```Listening for traffic on rnode://cfae6a0c885d734908f8c756fb0519d2df7fbcec@178.150.31.10?protocol=40400&discovery=40404```
+Local shard will be configured with the following configurations:
+- [REV Addresses (wallets.txt)](./data/genesis/wallets.txt)
+- nodes (see [docker-compose.yml](docker-compose.yml) for Node configs): 
+  - bootstrap node: `localhost:40402`
+  - observer node: `localhost:40412`
 
-# Run f1r3Drive app
+# Run F1r3Drive app
 
-1. Go to `f1r3Drive` folder. Ensure this directory has the same parent directory as the `f1r3fly` directory.
-2. Build f1r3Drive into Jar
-
+1. Download Jar or build F1r3Drive locally
 ```sh
 ./gradlew shadowJar -x test
 ```
-
-3. Run f1r3Drive app with a key (`a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954` is an exmaple key). This key has to be related to Wallet (row in wallet.txt at Node)
-
+2. Run F1r3Drive app with REV Address and Private key. That must be assosiated with some REV address from [wallets.txt](./data/genesis//wallets.txt):
 ```sh
-# creating ~/demo-f1r3Drive folder and mounting it to f1r3Drive
-java -jar ./build/libs/f1r3Drive-0.5.7-shadow.jar ~/demo-f1r3Drive -sk a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954 -ck ~/cipher.key -h localhost -p 40402 
+java -jar ./build/libs/f1r3drive-0.1.0.jar ~/demo-f1r3drive \
+   --cipher-key-path ~/cipher.key \
+   --validator-host localhost --validator-port 40402 \
+   --observer-host localhost --observer-port 40412 \
+   --rev-address 11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w --private-key a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
 ```
 
 # Demo
 
-Creating a tiny file inside ~/demo-f1r3Drive folder
+Creating a tiny file inside ~/demo-f1r3drive folder:
 
 ```sh
-echo "abc" > ~/demo-f1r3Drive/demo.txt
-ls -lh ~/demo-f1r3Drive/demo.txt
-cat ~/demo-f1r3Drive/demo.txt
+echo "abc" > ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/demo.txt
+ls -lh ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/demo.txt
+cat ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/demo.txt
 ```
 
-Copy 1M file inside ~/demo-f1r3Drive folder
+Copy 1M file inside ~/demo-f1r3drive folder:
 
 ```sh
 # generating binary file with 1M size
-dd if=/dev/zero of=large_data.txt  bs=1m  count=1
+dd if=/dev/zero of=large_data.txt bs=1m count=1
 
-cp large_data.txt ~/demo-f1r3Drive/ OR rsync -av --progress large_data.txt ./demo-f1r3Drive (here more logs)
-# wait for some time
+# copy file (use rsync for progress logs)
+cp large_data.txt ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/
+# OR: rsync -av --progress large_data.txt ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/
 
-# make sure that file is copied
-ls -lh ~/demo-f1r3Drive/large_data.txt
+# wait for some time, then verify the file is copied
+ls -lh ~/demo-f1r3drive/11112ZM9yrfaTrzCCbKjPbxBncjNCkMFsPqtcLFvhBf4Kqx6rpir2w/large_data.txt
 ```
 
 # Cleanup
 
-Stop all processes and remove all files
+Stop all processes and remove all files:
 
 ```sh
-# Stop node and f1r3Drive apps
+# hit Ctrl+C in F1r3Drive app
+
 # or kill if stuck
 ps aux | grep java | grep -v grep | awk '{print $2}' | xargs kill -9
 
-# clean Node state
-# Note: If you remove this directory, you will have to re-add the genesis files.
-# Use the command below to avoid this
-rm -rf ~/.rnode
 
-# clean Node state except for genesis files:
-find ~/.rnode -type f ! -path "$HOME/.rnode/genesis/*" -delete && find ~/.rnode -mindepth 1 -maxdepth 1 -type d ! -name "genesis" -exec rm -rf {} +
+# force unmount ~/demo-f1r3drive if stuck
+sudo diskutil umount force ~/demo-f1r3drive
 
-# Unmount ~/demo-f1r3Drive if f1r3Drive crashed
-sudo diskutil umount force ~/demo-f1r3Drive
+# stop Shard
+docker-compose -f docker-compose.yml down
 
-# ~/demo-f1r3Drive has to be empty folder
-# delete ~/demo-f1r3Drive before running the next demo
-rm -rf ~/demo-f1r3Drive
+# ~/demo-f1r3drive has to be empty folder
+# delete ~/demo-f1r3drive before running the next time
+rm -rf ~/demo-f1r3drive
 
 # remove large_data.txt
 rm -f large_data.txt
